ash/wallpaper/wallpaper_utils/wallpaper_decoder.cc
@@ -8,7 +8,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "ash/shell.h"
 #include "ash/shell_delegate.h"
 #include "ipc/ipc_channel.h"
-#include "services/data_decoder/public/cpp/decode_image.h"
 
 namespace ash {
 namespace {
@@ -32,6 +31,7 @@ void ConvertToImageSkia(OnWallpaperDecoded callback, const SkBitmap& image) {
 }  // namespace
 
 void DecodeWallpaper(const std::string& image_data,
+                     const data_decoder::mojom::ImageCodec& image_codec,
                      OnWallpaperDecoded callback) {
   // The connector for the mojo service manager is null in unit tests.
   if (!Shell::Get()->shell_delegate()->GetShellConnector()) {
@@ -41,9 +41,8 @@ void DecodeWallpaper(const std::string& image_data,
   std::vector<uint8_t> image_bytes(image_data.begin(), image_data.end());
   data_decoder::DecodeImage(
       Shell::Get()->shell_delegate()->GetShellConnector(),
-      std::move(image_bytes), data_decoder::mojom::ImageCodec::ROBUST_JPEG,
-      false /* shrink_to_fit */, kMaxImageSizeInBytes,
-      gfx::Size() /* desired_image_frame_size */,
+      std::move(image_bytes), image_codec, /*shrink_to_fit=*/true,
+      kMaxImageSizeInBytes, /*desired_image_frame_size=*/gfx::Size(),
       base::BindOnce(&ConvertToImageSkia, std::move(callback)));
 }
 
